third_party/move/move-compiler-v2/tests/reference-safety/function_ref_err.exp

Diagnostics:
error: cannot transfer mutable value since it is borrowed
   ┌─ tests/reference-safety/function_ref_err.move:15:18
   │
14 │         let au = g_mut(&mut 3, &mut addr);
   │                  ------------------------ previously mutably borrowed here
15 │         let du = f_mut(&h, &mut addr);
   │                  ^^^^^^^^^^^^^^^^^^^^ transfer attempted here
16 │         *du > 0;
17 │         *au > 1;
   │         --- conflicting reference `au` used here
